--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- GOOGLE IMPORTED FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    
     <title>winiboya.com</title>
   </head>
   <body>
